Merge mytools::MyDesktop back into MainStarter.